# components

./: .gitignore  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.github/scripts/: detect-changes.sh  publish-npm.sh
.github/workflows/: cd.yml  ci.yml
crates/discord/: Cargo.toml
crates/discord/src/: bindings.rs  lib.rs
crates/discord/wit/: world.wit
crates/github/: Cargo.toml
crates/github/src/: bindings.rs  lib.rs
crates/github/wit/: world.wit
crates/hello-world/: Cargo.toml
crates/hello-world/src/: bindings.rs  lib.rs
crates/hello-world/wit/: world.wit
crates/openai/: Cargo.toml
crates/openai/src/: bindings.rs  lib.rs
crates/openai/wit/: world.wit
