[package]
name = "discord"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
waki = { version = "0.5.1", features = ["json"] }
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wassemble:discord"

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "./wit/deps/wasi-cli-0.2.5" }
"wasi:clocks" = { path = "./wit/deps/wasi-clocks-0.2.5" }
"wasi:http" = { path = "./wit/deps/wasi-http-0.2.5" }
"wasi:io" = { path = "./wit/deps/wasi-io-0.2.5" }
"wasi:random" = { path = "./wit/deps/wasi-random-0.2.5" }
