[package]
name = "openai"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
waki = { version = "0.5.1", features = ["json"] }
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[package.metadata.component]
package = "wassemble:openai"
